--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.js"></script>
     <script>
       const socket = io("http://localhost:3000");
+
+      socket.on("response",(message)=>{
+         console.log(message);
+      });
+
       function sendMsg() {
         socket.emit("message", "HELLO WORLD");
       }
